# VoxStrike

./: .gitignore  Cargo.toml  README.md  build-script.sh  build.rs  build.sh  log4rs.yml
profiles/: helldivers2.toml
src/: audio.rs  inputbot_patch.rs  main.rs  profiles.rs  settings.rs  speech_to_text.rs
