[package]
name = "vox-strike"
version = "0.1.0"
edition = "2021"
description = "Voice activated macros"
repository = "https://github.com/GetUsernameFromDatabase/vox-strike"
authors = ["Ryan Murulo"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
cpal = { version = "0.15.3", features = ["asio"] }
whisper-rs = "0.11.1"
anyhow = "1.0.82"
parking_lot = "0.12.2"
log4rs = "1.3.0"
log = "0.4.21"
toml = "0.8.12"
regex = "1.10.4"
serde = "1.0.200"
inputbot = { git = "https://github.com/obv-mikhail/InputBot", branch = "develop", features = [
  "serde",
] }
